# YouTubeScannerBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  auxiliary_utils.py  backup_utils.py  click_utils.py  data_example.csv  database_models.py  database_utils.py  docker-compose.yaml  env_utils.py  format_utils.py  main.py  message_utils.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  run.py  search.py  send_worker.py  settings.py  views.sql  youtube_parser.py  youtube_utils.py
app/: __main__.py  auxiliary_utils.py  format_utils.py  message_utils.py  run.py  send_worker.py  settings.py  win_console_utils.py  youtube_utils.py
app/bot_ui/: bot_types.py  callbacks.py  commands.py  filers.py  keyboards.py
app/database/: models.py  utils.py
app/youtube_parser/: search.py  youtube_parser.py
bot_ui/: bot_types.py  callbacks.py  commands.py  filers.py  keyboards.py
configs/: log_config.json  log_config_debug.json
database/: import_utils.py  models.py  recreate_db.py  utils.py
log_configs/: dev.json  prod.json
migrations/: env.py
migrations/versions/: 0f4a9f4a0595_rename_tag_to_category.py  2037534d665c_unique_yt_tag.py  447f9219817f_initial.py  bd29d4611857_postgres.py
scripts/: backup.py  delete_videos.sql  drop_destinations.sql  get_ext_env.py  make_dev_db.sql  upload_backup.py
tests/: test_auxiliary_utils.py  test_env_utils.py  test_parse_video_data.py  test_parse_video_tags.py
youtube_parser/: __init__.py  search.py  youtube_parser.py
(+35 files in other folders)
